Remove Solid* and extra DBs; use single DATABASE_URL in production

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-# SQLite (dev / test)
+# SQLite (dev/test)
 default: &default
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
@@ -17,3 +17,5 @@ production:
   url: <%= ENV["DATABASE_URL"] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
   timeout: 5000
+  migrations_paths:
+    - db/migrate
